Add GLAD library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,12 @@ project(${PROJECT_NAME})
 set(MAIN_SOURCES
 	src/main.cpp)
 
+set(CLIENT_SOURCES
+	src/client/window.cpp)
+
 add_executable(${PROJECT_NAME}
-	${MAIN_SOURCES})
+	${MAIN_SOURCES}
+	${CLIENT_SOURCES})
 
 # Include SDL2
 
@@ -21,3 +25,19 @@ pkg_search_module(SDL2 REQUIRED sdl2)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
+
+# Include GLAD
+
+add_library(glad
+	lib/glad/glad.c
+	lib/glad/glad.h)
+
+target_link_libraries(glad
+	${CMAKE_DL_LIBS})
+
+set(GLAD_LIBRARIES glad)
+
+include_directories(lib)
+
+target_link_libraries(${PROJECT_NAME}
+	${GLAD_LIBRARIES})
