Expose config variables * Expose certain config variables to C++ * Add version config variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,16 @@ set(PROJECT_NAME "ProjectEden")
 
 project(${PROJECT_NAME})
 
+# Project Configuration Variables
+
+set(VERSION_MAJOR 0)
+set(VERSION_MINOR 1)
+set(VERSION_PATCH 0)
+
+set(VERSION_STRING "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
+
+configure_file(config.h.in src/config.h)
+
 # Main Sources
 
 set(MAIN_SOURCES
