Integrate catch2 for unit testing
* Add custom `game` target for building main executable
* Add custom `tests` target for building `UnitTests` executable

Everything may be built with `make` or `make all`, the game only may be
built with `make game` or `make ProjectEden`, and the unit tests only
may be built with `make tests` or `make UnitTests`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.1)
 
 set(CMAKE_CXX_STANDARD 11)
 set(PROJECT_NAME "ProjectEden")
+set(UNIT_TESTS_EXECUTABLE "UnitTests")
 
 project(${PROJECT_NAME})
 
@@ -15,7 +16,7 @@ set(VERSION_STRING "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 
 configure_file(config.h.in src/config.h)
 
-# Main Sources
+# Generate Main Executable
 
 set(MAIN_SOURCES
 	src/main.cpp)
@@ -28,6 +29,21 @@ add_executable(${PROJECT_NAME}
 	${MAIN_SOURCES}
 	${CLIENT_SOURCES})
 
+add_custom_target(game)
+add_dependencies(game ${PROJECT_NAME})
+
+# Generate Unit Tests Executable
+
+set(TEST_SOURCES)
+
+add_executable(${UNIT_TESTS_EXECUTABLE}
+	${TEST_SOURCES}
+	${CLIENT_SOURCES})
+
+target_include_directories(${UNIT_TESTS_EXECUTABLE} PUBLIC src)
+add_custom_target(tests)
+add_dependencies(tests ${UNIT_TESTS_EXECUTABLE})
+
 # Include SDL2
 
 find_package(PkgConfig REQUIRED)
@@ -36,6 +52,7 @@ pkg_search_module(SDL2 REQUIRED sdl2)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
+target_link_libraries(${UNIT_TESTS_EXECUTABLE} ${SDL2_LIBRARIES})
 
 # Include GLAD
 
@@ -52,6 +69,8 @@ include_directories(lib)
 
 target_link_libraries(${PROJECT_NAME}
 	${GLAD_LIBRARIES})
+target_link_libraries(${UNIT_TESTS_EXECUTABLE}
+	${GLAD_LIBRARIES})
 
 # Include JsonCPP
 
@@ -64,3 +83,16 @@ set(JSON_LIBRARIES json)
 
 target_link_libraries(${PROJECT_NAME}
 	${JSON_LIBRARIES})
+target_link_libraries(${UNIT_TESTS_EXECUTABLE}
+	${JSON_LIBRARIES})
+
+# Include Catch2
+
+add_library(catch2 STATIC EXCLUDE_FROM_ALL
+	lib/catch2/catch.cpp
+	lib/catch2/catch.hpp)
+
+set(CATCH_LIBRARIES catch2)
+
+target_link_libraries(${UNIT_TESTS_EXECUTABLE}
+	${CATCH_LIBRARIES})
