Add Version class
Follows SemVer specification, parsing a version string to extract
major, minor, patch, prerelease type and version, and build
metadata. It also includes operator overloads for the assignment
and comparison operators, allowing comparison not only with other
Version objects, but also with strings.

For information regarding the format in which version strings are
parsed, see the SemVer specification: https://semver.org/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,13 @@ set(CLIENT_SOURCES
 	src/client/client.cpp
 	src/client/window.cpp)
 
+set(UTIL_SOURCES
+	src/utilities/version.cpp)
+
 add_executable(${PROJECT_NAME}
 	${MAIN_SOURCES}
-	${CLIENT_SOURCES})
+	${CLIENT_SOURCES}
+	${UTIL_SOURCES})
 
 add_custom_target(game)
 add_dependencies(game ${PROJECT_NAME})
@@ -35,11 +39,13 @@ add_dependencies(game ${PROJECT_NAME})
 # Generate Unit Tests Executable
 
 set(TEST_SOURCES
-	tests/client/window.cpp)
+	tests/client/window.cpp
+	tests/utilities/version.cpp)
 
 add_executable(${UNIT_TESTS_EXECUTABLE}
 	${TEST_SOURCES}
-	${CLIENT_SOURCES})
+	${CLIENT_SOURCES}
+	${UTIL_SOURCES})
 
 target_include_directories(${UNIT_TESTS_EXECUTABLE} PUBLIC src)
 add_custom_target(tests)
