Add person class
Creates an object storing the name, email, and URL as defined
either within a JSON object or within a string, in the format seen
below. This class is a precursor to the package class, allowing
support for author and contributor definitions as with NPM.

John Doe <j@doe.com> (https://doe.com)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,8 @@ set(CLIENT_SOURCES
 
 set(UTIL_SOURCES
 	src/utilities/version.cpp
-	src/utilities/range.cpp)
+	src/utilities/range.cpp
+	src/utilities/person.cpp)
 
 add_executable(${PROJECT_NAME}
 	${MAIN_SOURCES}
@@ -42,7 +43,8 @@ add_dependencies(game ${PROJECT_NAME})
 set(TEST_SOURCES
 	tests/client/window.cpp
 	tests/utilities/version.cpp
-	tests/utilities/range.cpp)
+	tests/utilities/range.cpp
+	tests/utilities/person.cpp)
 
 add_executable(${UNIT_TESTS_EXECUTABLE}
 	${TEST_SOURCES}
