Move email and url validation to a separate header
This allows for use across the rest of the codebase,  most
importantly, within the package base class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,8 @@ set(CLIENT_SOURCES
 set(UTIL_SOURCES
 	src/utilities/version.cpp
 	src/utilities/range.cpp
-	src/utilities/person.cpp)
+	src/utilities/person.cpp
+	src/utilities/validate.cpp)
 
 add_executable(${PROJECT_NAME}
 	${MAIN_SOURCES}
@@ -44,7 +45,8 @@ set(TEST_SOURCES
 	tests/client/window.cpp
 	tests/utilities/version.cpp
 	tests/utilities/range.cpp
-	tests/utilities/person.cpp)
+	tests/utilities/person.cpp
+	tests/utilities/validate.cpp)
 
 add_executable(${UNIT_TESTS_EXECUTABLE}
 	${TEST_SOURCES}
