Add Package class
Creates a C++ object based off of a `package.json` file. Its
constructor takes a `Json::Value` object and the path of the
package root directory. Methods are as listed below:

* `path`: Returns string
* `name`: Returns string
* `version`: Returns `MUtilities::Version` object
* `title`: Returns string
* `description`: Returns string
* `keywords`: Returns vector of strings
* `homepage`: Returns string
* `bugs`: Returns pair, first: url, second: email
* `license`: Returns string
* `author`: Returns string
* `contributors`: Returns vector of `MUtilities::Person` objects
* `repository`: Returns string
* `dependencies`: Returns map of strings to `MUtilities::Range`
* `optionalDependencies`: Returns map of string to
`Mutilities::Range`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,9 @@ set(CLIENT_SOURCES
 	src/client/client.cpp
 	src/client/window.cpp)
 
+set(PACKAGES_SOURCES
+	src/packages/package.cpp)
+
 set(UTIL_SOURCES
 	src/utilities/version.cpp
 	src/utilities/range.cpp
@@ -35,6 +38,7 @@ set(UTIL_SOURCES
 add_executable(${PROJECT_NAME}
 	${MAIN_SOURCES}
 	${CLIENT_SOURCES}
+	${PACKAGES_SOURCES}
 	${UTIL_SOURCES})
 
 add_custom_target(game)
@@ -48,11 +52,13 @@ set(TEST_SOURCES
 	tests/utilities/range.cpp
 	tests/utilities/person.cpp
 	tests/utilities/validate.cpp
-	tests/utilities/utility.cpp)
+	tests/utilities/utility.cpp
+	tests/packages/package.cpp)
 
 add_executable(${UNIT_TESTS_EXECUTABLE}
 	${TEST_SOURCES}
 	${CLIENT_SOURCES}
+	${PACKAGES_SOURCES}
 	${UTIL_SOURCES})
 
 target_include_directories(${UNIT_TESTS_EXECUTABLE} PUBLIC src)
