Link C++17 Filesystem library and bump compiler requirement
* Bump GCC compiler requirement to 8.0+, the first version where
the C++17 Filesystem library can be directly referred to as
`<filesystem>`, rather than `<experimental/filesystem`>
* Manually link filesystem library
* Fix several methods (see range, window, and tests/package) that
did not always return as they were supposed to, henceforth
resulting in a broken executable when compiling with Clang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,13 @@ target_link_libraries(${PROJECT_NAME}
 target_link_libraries(${UNIT_TESTS_EXECUTABLE}
 	${LUA_LIBRARIES})
 
+# Include missing internal C++ libraries
+
+target_link_libraries(${PROJECT_NAME}
+	stdc++fs)
+target_link_libraries(${UNIT_TESTS_EXECUTABLE}
+	stdc++fs)
+
 # Include Catch2
 
 add_library(catch2 STATIC EXCLUDE_FROM_ALL
